--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="src/assets/Brand_Logo(vite).png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="src/assets/Brand_Logo(vite).png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Chinthana Chamod - Full-Stack Developer Portfolio. Experienced in React, Node.js, Spring Boot, and modern web technologies." />
     <meta name="keywords" content="Chinthana Chamod, Full-Stack Developer, React, Node.js, Java, JavaScript, Web Development" />
